Fixed bug that was causing side scrollbar to appear

--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@ html {
 }
 
 main {
-    width: 100vw;
+    width: 100%;
 }
 
 body {
     align-items: center;
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
 }
 
 .heading-secondary {
@@ -69,7 +69,7 @@ body {
     padding: 10px 0px;
     position: fixed;
     top: 0%;
-    width: 100vw;
+    width: 100%;
     z-index: 1;
 }
 
@@ -187,7 +187,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 50px;
+    padding: 50px 0px;
     height: fit-content;
 }
 
@@ -299,7 +299,7 @@ body {
     display: flex;
     flex-direction: column;
     height: fit-content;
-    padding: 50px;
+    padding: 50px 0px;
 }
 
 .contact-container h1 {
@@ -463,7 +463,7 @@ footer {
     }
 
     .home-container {
-        padding: 10px;
+        padding: 10px 25px;
         margin-left: 0px;
     }
 
@@ -517,7 +517,7 @@ footer {
         margin-bottom: 25px;
     }
     .skill-icons {
-        width: 100vw;
+        width: 100%;
         gap: 25px;
         margin-bottom: 10px;
     }
